--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,25 @@
-python-telegram-bot>=21.0
-python-dotenv==1.0.0
-sqlalchemy>=2.0.25
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
 alembic==1.13.1
-aiohttp>=3.8.0
+anyio==4.10.0
+attrs==25.3.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+frozenlist==1.7.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+Mako==1.3.10
+MarkupSafe==3.0.2
+multidict==6.6.4
+propcache==0.3.2
+python-dotenv==1.0.0
+python-telegram-bot==22.3
+requests==2.32.5
+sniffio==1.3.1
+SQLAlchemy==2.0.43
+typing_extensions==4.15.0
+urllib3==2.5.0
+yarl==1.20.1
