--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7870121478:AAGtGNo-Hrx3Ox4OZsbuqZniexzeR_tl47w
-ADMIN_CHAT_IDS=318073844
+ADMIN_CHAT_IDS=318073844,5295372481
 MODE=POLLING
