Fix Vercel 404 error - restructure API for proper deployment

--- a/vercel.json
+++ b/vercel.json
@@ -2,31 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "webapp/api.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
-    },
-    {
-      "src": "webapp/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/webapp/api.py"
-    },
-    {
-      "src": "/webapp/(.*)",
-      "dest": "/webapp/$1"
+      "dest": "/api/index.py"
     },
     {
       "src": "/(.*)",
-      "dest": "/webapp/index.html"
+      "dest": "/webapp/$1"
     }
-  ],
-  "env": {
-    "DB_URL": "@db_url",
-    "BOT_TOKEN": "@bot_token",
-    "ADMIN_CHAT_IDS": "@admin_chat_ids"
-  }
+  ]
 }
