Fix 404 error - simplify API and add test page

--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,12 @@
       "dest": "/api/index.py"
     },
     {
+      "src": "/",
+      "dest": "/index.html"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/webapp/$1"
+      "dest": "/$1"
     }
   ]
 }
