--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
-  "rewrites": [
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.py"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
