--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,8 @@
       "dest": "/api/index.py"
     },
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
