--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,12 @@
 {
   "version": 2,
-  "functions": {
-    "api/*.py": {
-      "runtime": "python3.9"
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "routes": [
-    {
-      "src": "/api/test",
-      "dest": "/api/test.py"
-    },
-    {
-      "src": "/api/health",
-      "dest": "/api/health.py"
-    },
     {
       "src": "/api/(.*)",
       "dest": "/api/index.py"
