--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     { "src": "api.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "^/api/(.*)$", "dest": "/api.py" },
-    { "src": "^/(.*)$", "dest": "/index.html" }
+    { "src": "/api/(.*)", "dest": "/api.py" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
