--- a/webapp/vercel.json
+++ b/webapp/vercel.json
@@ -5,6 +5,7 @@
   ],
   "routes": [
     { "src": "^/api/(.*)$", "dest": "/api.py" },
+    { "src": "^/test$", "dest": "/test.html" },
     { "src": "^/(.*)$", "dest": "/index.html" }
   ]
 }
