Fix Vercel deployment - move webapp files to root directory

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,1 @@
-# Telegram Bot Dependencies
-python-telegram-bot==20.7
-SQLAlchemy==2.0.21
-psycopg2-binary==2.9.7
-python-dotenv==1.0.0
-alembic==1.13.1
+# No external dependencies needed for Vercel serverless function
