--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -1,1 +1,2 @@
-# No external dependencies needed for Vercel serverless function
+# Vercel serverless function dependencies
+# No external dependencies needed
